--- a/templates/design_system/index.ejs
+++ b/templates/design_system/index.ejs
@@ -200,11 +200,9 @@ pageURL:'', thumbnailImgURL: 'vickywang_web.png'
             <li class="rightPanel"><a href="#content42"> &#160; Interactive Accordion</a></li>
             <li class="rightPanel"><a href="#content43"> &#160; Carousel Collection </a></li>
             <li class="rightPanel"><a href="#content44"> &#160; Modals</a></li>
-            <li class="rightPanel"><a href="#content45"> &#160; Navigation - Header </a></li>
-            <li class="rightPanel"><a href="#content46"> &#160; Navigation - Footer </a></li>
-            <li class="rightPanel"><a href="#content47"> &#160; Navigation - Sidebar </a></li>
-            <li class="rightPanel"><a href="#content48"> &#160; Code Snippet Explorer </a></li>
-            <li class="rightPanel"><a href="#content49"> &#160; Tag Cloud</a></li>
+            <li class="rightPanel"><a href="#content45"> &#160; Navigation </a></li>
+            <li class="rightPanel"><a href="#content46"> &#160; Code Snippet Explorer </a></li>
+            <li class="rightPanel"><a href="#content47"> &#160; Tag Cloud</a></li>
           </ul>
         </li>
 
@@ -4105,8 +4103,53 @@ pageURL:'', thumbnailImgURL: 'vickywang_web.png'
           </div>
         </div>
       </section>
+      <section id="content46_1">
+        <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: `Code Snippet Explorer` }) %>
+        <%- include(`${templatePath}/shared/comp_content_subtitle`, {type:'left', title: `block_tabs_copyCode`, textColor:'SkylineBlueDarker', iconUrl:''}) %>
 
-      <section id="content48">
+        <div class="wrapper">
+          <div id="tabsContent" class="tabContent">
+            <!-- Tab 1 -->
+            
+        <div class="blankHS"></div>
+
+        <div class="wrapper">
+          <div class="Grid Grid--full Grid--gutters">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="filed">
+                  <div class="tab-container">
+                    <div class="tabs">
+                      <input type="radio" class="select-EJS" name="Demo" id="Tdemo1" checked="">
+                      <label for="Tdemo1" class="tab">EJS</label>
+                      <input type="radio" class="select-HTML" name="Demo" id="Tdemo2">
+                      <label for="Tdemo2" class="tab">HTML</label>
+                      <input type="radio" class="select-CSS" name="Demo" id="Tdemo3">
+                      <label for="Tdemo3" class="tab">CSS</label>
+                    </div>
+                    <button class="copy-btn" style="display:inline;">Copy Code</button>
+                  </div>
+                  <div class="ejs-block code-block" style="display: none;">
+                    <pre class="ejs-code"><code>Insert ejs code</code></pre>
+                  </div>
+                  <div class="html-block code-block" style="display:none;">
+                    <pre class="html-code"><code>Insert html code</code></pre>
+                  </div>
+                  <div class="css-block code-block" style="display: block;">
+                    <pre class="css-code"><code>Insert css code</code></pre>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="blankHXS"></div>
+
+
+          </div>
+        </div>
+      </section>
+      <section id="content46">
 
         <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: `Code Snippet Explorer (CSE)` }) %>
         <%- include(`${templatePath}/shared/comp_content_subtitle`, {type:'left', title: `block_tabs_copyCode`, textColor:'SkylineBlueDarker', iconUrl:''}) %>
@@ -4173,7 +4216,7 @@ pageURL:'', thumbnailImgURL: 'vickywang_web.png'
               `
           }) %>
       </section>
-      <section id="content49">
+      <section id="content47">
 
         <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'Skills & Experiences' }) %>
         <%- include(`${templatePath}/shared/comp_content_subtitle`, {type:'left', title: `block_tagCloud`, textColor:'SkylineBlueDarker', iconUrl:''}) %>
