--- a/templates/main.css
+++ b/templates/main.css
@@ -4330,7 +4330,8 @@ body .flex-container.Mobile {
 
 .t-hello {
     font-family: "Gloria Hallelujah", sans-serif;
-    font-weight: 700;
+    font-weight: 400;
+    font-style: normal;
     font-size: clamp(1.3em, 2.8vw, 1.8em);
     margin: 0;
     color: var(--Grey700);
@@ -6620,238 +6621,6 @@ background: linear-gradient(45deg,#F17C58, #E94584, #24AADB , #27DBB1,#FFDC18, #
         background-position: 100%
     }
 }
-
-/* =================== timeline =================== */
-
-
-
-
-
-.timeline,
-.timeline * {
-    box-sizing: border-box;
-}
-
-
-/* INTRO SECTION
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-
-
-/* TIMELINE
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-.timeline ul {
-    padding: 50px 0;
-}
-
-.timeline ul li {
-    list-style-type: none;
-    position: relative;
-    width: 6px;
-    margin: 0 auto;
-    padding-top: 50px;
-    background: #fff;
-}
-
-.timeline ul li::after {
-    content: "";
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    transform: translateX(-50%);
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background: inherit;
-    z-index: 1;
-}
-
-.timeline ul li div {
-    border-radius: 4px;
-    position: relative;
-    bottom: 0;
-    width: 400px;
-    padding: 12px 32px;
-    background: var(--VW--Yellow500);
-}
-
-.timeline ul li div::before {
-    content: "";
-    position: absolute;
-    bottom: 7px;
-    width: 0;
-    height: 0;
-    border-style: solid;
-}
-
-.timeline ul li:nth-child(odd) div {
-    left: 45px;
-}
-
-.timeline ul li:nth-child(odd) div::before {
-    left: -15px;
-    border-width: 8px 16px 8px 0;
-    border-color: transparent var(--VW--Yellow500) transparent transparent;
-}
-
-.timeline ul li:nth-child(even) div {
-    left: -439px;
-}
-
-.timeline ul li:nth-child(even) div::before {
-    right: -15px;
-    border-width: 8px 0 8px 16px;
-    border-color: transparent transparent transparent var(--VW--Yellow500);
-}
-
-
-
-
-/* EFFECTS
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-.timeline ul li::after {
-    transition: background 0.5s ease-in-out;
-}
-
-.timeline ul li.in-view::after {
-    background: var(--VW--Yellow500);
-}
-
-.timeline ul li div {
-    visibility: hidden;
-    opacity: 0;
-    transition: all 0.5s ease-in-out;
-}
-
-.timeline ul li:nth-child(odd) div {
-    transform: translate3d(200px, 0, 0);
-}
-
-.timeline ul li:nth-child(even) div {
-    transform: translate3d(-200px, 0, 0);
-}
-
-.timeline ul li.in-view div {
-    transform: none;
-    visibility: visible;
-    opacity: 1;
-}
-
-
-/* GENERAL MEDIA QUERIES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-@media screen and (max-width: 900px) {
-    .timeline ul li div {
-        width: 250px;
-    }
-
-    .timeline ul li:nth-child(even) div {
-        left: -289px;
-        /*250+45-6*/
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .timeline ul li {
-        margin-left: 20px;
-    }
-
-    .timeline ul li div {
-        width: calc(100vw - 91px);
-    }
-
-    .timeline ul li:nth-child(even) div {
-        left: 45px;
-    }
-
-    .timeline ul li:nth-child(even) div::before {
-        left: -15px;
-        border-width: 8px 16px 8px 0;
-        border-color: transparent var(--VW--Yellow500) transparent transparent;
-    }
-}
-
-
-/* EXTRA/CLIP PATH STYLES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.timeline-clippy ul li::after {
-    width: 40px;
-    height: 40px;
-    border-radius: 0;
-}
-
-.timeline-rhombus ul li::after {
-    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
-}
-
-.timeline-rhombus ul li div::before {
-    bottom: 12px;
-}
-
-.timeline-star ul li::after {
-    clip-path: polygon(50% 0%,
-            61% 35%,
-            98% 35%,
-            68% 57%,
-            79% 91%,
-            50% 70%,
-            21% 91%,
-            32% 57%,
-            2% 35%,
-            39% 35%);
-}
-
-.timeline-heptagon ul li::after {
-    clip-path: polygon(50% 0%,
-            90% 20%,
-            100% 60%,
-            75% 100%,
-            25% 100%,
-            0% 60%,
-            10% 20%);
-}
-
-.timeline-infinite ul li::after {
-    animation: scaleAnimation 2s infinite;
-}
-
-@keyframes scaleAnimation {
-    0% {
-        transform: translateX(-50%) scale(1);
-    }
-
-    50% {
-        transform: translateX(-50%) scale(1.25);
-    }
-
-    100% {
-        transform: translateX(-50%) scale(1);
-    }
-}
-
-
-/* FOOTER STYLES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.page-footer {
-    position: fixed;
-    right: 0;
-    bottom: 20px;
-    display: flex;
-    align-items: center;
-    padding: 5px;
-    color: black;
-    background: rgba(255, 255, 255, 0.65);
-}
-
-.page-footer a {
-    display: flex;
-    margin-left: 4px;
-}
-
-/* =================== timeline =================== */
 /* =================== logo =================== */
 /* Basic setup for the logo container */
 .logo-container {
@@ -6897,3 +6666,5 @@ background: linear-gradient(45deg,#F17C58, #E94584, #24AADB , #27DBB1,#FFDC18, #
 .logo-1 {
     animation: logo-switch-1 2.5s ease-in-out infinite;
 }
+
+/* =================== logo =================== */
