--- a/templates/shared/block_nav_header_main.ejs
+++ b/templates/shared/block_nav_header_main.ejs
@@ -6,9 +6,9 @@
       <a href="/">
         <div class="logo-container">
           <!-- LOGO_0.svg -->
-          <img src="/icon/LOGO_0.svg" alt="VW" class=" logo logo-0">
+          <img src="/icon/LOGO_0.svg" alt="VW Studio Logo V0" class=" logo logo-0">
           <!-- LOGO_1.svg -->
-          <img src="/icon/LOGO_1.svg" alt="VW" class=" logo logo-1">
+          <img src="/icon/LOGO_1.svg" alt="VW Studio Logo V1" class=" logo logo-1">
         </div>
       </a>
 
